--- a/src/AddBook.css
+++ b/src/AddBook.css
@@ -3,7 +3,7 @@
     margin: 50px 20%;
 }
 .AddAuthorForm__input{
-    margin-bottom:2px£»
+    margin-bottom:20px;
 }
 
 .AddAuthorForm__input>label{
